--- a/testgui.app/Contents/Info.plist
+++ b/testgui.app/Contents/Info.plist
@@ -7,11 +7,11 @@
 	<key>CFBundleExecutable</key>
 	<string>testgui</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.example.testgui</string>
+	<string>com.example.myapp</string>
 	<key>CFBundleIconFile</key>
 	<string>icon.icns</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.0.1</string>
+	<string>1.0</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
