--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-/LevelManage.app
+# Ignore build script
+cmd/myapp/LevelManage.app/Contents
+*.ldb
+*.log
+LOG
+LOG.old
+CURRENT
+MANIFEST-*
 .DS_Store
 **/.DS_Store
 *.DS_Store
-
