--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-# Ignore build script
-cmd/myapp/LevelManage.app/Contents
-*.ldb
-*.log
-LOG
-LOG.old
-CURRENT
-MANIFEST-*
+/LevelManage.app
 .DS_Store
 **/.DS_Store
 *.DS_Store
+/data.json
+
