--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,4 +1,7 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -6,12 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/cmd/myapp/main.go",
-            "env": {},
-            "args": [],
-            "buildFlags": "",
-            "showLog": true,
-            "dlvToolPath": "${env:GOPATH}/bin/dlv"
+            "program": "${workspaceFolder}/cmd/myapp/main.go"
         }
     ]
 }
